# bazel-ts-monorepo

./: .bazelrc  BUILD.bazel  README.md  TODO.md  TROUBLES.md  WORKSPACE  package-lock.json  package.json  tsconfig.json
src/: app.tsx  index.html
test-example/: BUILD.bazel  _example-component.scss  example-component.tsx  index.ts  test.ts
test-library/: BUILD.bazel  example.ts  get-current-time-millis.ts  index.ts  rollup.config.js  run-test.ts
test-web/: BUILD.bazel  app.tsx  bundle.js  env.ts  index.html  index.prod.tsx  index.scss  index.ts  index.tsx  rollup.config.js
test_bazel_build/: package-lock.json  package.json
