package(default_visibility=["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
 
ts_library(
    name = "test-example",
    srcs = glob(["**/*.ts", "**/*.tsx"]),
    module_name = "test-example",
    deps = [
        "//test-library",
        "@npm//react",
        "@npm//react-dom",
        "@npm//@types",
    ]
)
