package(default_visibility=["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_library")
 
ts_library(
    name = "test-example",
    srcs = glob(["**/*.ts", "**/*.tsx"]),
    module_name = "test-example",
    deps = [
        "//test-library",
        "@npm//react",
        "@npm//react-dom",
        "@npm//@types",
    ]
)

sass_library(
    name = "styles",
    srcs = glob(["**/*.scss"])
)