package(default_visibility=["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")

ts_library(
    name = "index",
    srcs = glob(["**/*.ts", "**/*.tsx"]),
    deps = [
        "//test-example",
        "@npm//react",
        "@npm//react-dom",
        "@npm//@types",
    ]
)

# Look into https://github.com/codesuki/rules_nodejs/blob/react-example/examples/reactjs/environment.dev.ts
ts_devserver(
    name = "devserver",
    entry_module = "test_bazel_build/test-web/index",
    deps = [
        ":index",
        "@npm//react:react__umd",
        "@npm//react-dom:react-dom__umd",
    ]
)

rollup_bundle(
    name = "bundle",
    entry_point = ":index.prod.tsx",
    deps = [
        ":index",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-replace"
    ],
    config_file = "rollup.config.js",
)

pkg_web(
    name = "webapp",
    srcs = [
        ":bundle.js",
        ":index.html"
    ]
)